[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microspade"
version = "0.1.0"
description = "SPADE-like agents for micro:bit using MicroPython"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["microbit", "micropython", "agents", "spade", "multiagent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
