[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microspade"
version = "0.1.0"
description = "SPADE-like agents for micro:bit using MicroPython"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["microbit", "micropython", "agents", "spade", "multiagent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "microfs>=1.4.5",
    "mpremote>=1.25.0",
    "mpy-cross-v5>=1.1.1",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "ubittool>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["microspade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
